Fixes from modernizer maven plugin in rfc8040 module
Remove some legacy APIs

Change-Id: I689190caf9be2357b2ffb2d2197783ebaba694d9
Signed-off-by: Vladyslav Marchenko <vladyslav.marchenko@pantheon.tech>